--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 
 pre code {
   display: block; padding: 0.5em;
-  background: #f7f7f7;
+  background: #FAFAFA;
   font-size: 14px;
   line-height: 19.8px;
   font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
