--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,8 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 */
 
 pre code {
-  display: block; padding: 0.5em;
+  display: block;
+  padding: 0.8em;
   background: #FAFAFA;
   font-size: 14px;
   line-height: 19.8px;
