--- a/css/app.css
+++ b/css/app.css
@@ -108,7 +108,7 @@ header {
 
 @font-face {
   font-family: 'octicons';
-  src: url(../font/octicons-a3034da883189027d9623a32c24b59d1.eot?#iefix) format("embedded-opentype"),url(../font/octicons-03ce910f6328ba840aebb2f2f3eabbf3.woff) format("woff"),url(../font/octicons-bb517fc28c80374c03352e84ef5f167b.ttf) format("truetype"),url(../font/octicons-d42b7ba4333417ba2a114b1f0407aa5b.svg#octicons) format("svg");
+  src: url(../font/octicons.eot?#iefix) format("embedded-opentype"),url(../font/octicons.woff) format("woff"),url(../font/octicons.ttf) format("truetype"),url(../font/octicons.svg#octicons) format("svg");
   font-weight: normal;
   font-style: normal
 }
