--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,15 @@
+::selection {
+  background:#e2e2e2;
+  color:#333;
+}
+::-moz-selection {
+  background:#e2e2e2;
+  color:#333;
+}
+::-webkit-selection {
+  background:#e2e2e2;
+  color:#333;
+}
 body {
   font-size: 14px;
   line-height: 18px;
